[package]
name = "RouletteHeroEditor"
version = "0.1.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.32.2", features = ["persistence"] }
egui_extras = { version = "0.32.2", features = ["all_loaders"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rfd = "0.15.4"
winit = "0.30.12"
log = "0.4.22"
env_logger = "0.11.5"
image = { version = "0.24.5", features = ["jpeg", "png"] }
steamworks = "0.12.2"